@@ -28,7 +28,7 @@ export const MatIds = {
 export const UNIT_PRICE_GROW_RATE = 1.04;
 export const BUILDING_PRICE_GROW_RATE = 1.08;
 export const SPACE_STATION_PRICE = 1e6;
-export const SPACE_STATION_HAB_SPACE = 50;
+export const SPACE_STATION_HAB_SPACE = 200;
 export const SPACE_STATION_GROW = 10;
 export const MOD_PER_ROBOTICS = 0.1;
 export const MOD_PER_OTHERS = 0.2;
