@@ -385,14 +385,15 @@ export class ResearchManager extends JobManager {
         stationToUp: [
           {
             stationId: spaceStations[i].id,
-            habSpace: 0.5
+            habSpace: 1
           }
         ]
       };
       resData.researchToUnlock.push(resDataUp.id);
-      if (i === 5) {
-        resData.researchToUnlock.push("me");
-      }
+      // if (i === 5) {
+      //TODO: implement megastructures
+      // resData.researchToUnlock.push("me");
+      // }
       this.researches.push(new Research(resDataUp, this));
       this.researches.push(new Research(resData, this));
 
