@@ -1,3 +1,6 @@
+-   Space station buff
+-   Disabled megastructure research
+
 21/07/2020
 -   Warps notifications options
 -   Added info modals
